--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,10 @@
 	<html ng-app="angular" manifest="ngStart.manifest">
 <!(endif)-->
 <!--(if target local)> -->
-<html xmlns="http://www.w3.org/1999/html">
+<html ng-app="chronik">
 <!--<!(endif)-->
 <head>
-	<title>ngStart</title>
+	<title>Familienchronik</title>
 
 	<meta charset="utf-8">
 
@@ -24,15 +24,14 @@
 	<!--<!(endif)-->
 </head>
 <body ng-controller="navbarController">
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a href="#" class="navbar-brand">WebChronik</a>
+			<a href="#familie" class="navbar-brand">WebChronik</a>
         </div>
         <div class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
-                <li ng-class="{active: isActive('/about/')}"><a href="#about">About Page</a></li>
-                <li ng-class="{active: isActive('/contact/')}"><a href="#contact">Contact Page</a></li>
+                <li ng-class="{active: isActive('/about/')}"><a href="#about">Über</a></li>
             </ul>
         </div>
 	</div>
