--- a/app/modules/about/about.html
+++ b/app/modules/about/about.html
@@ -1,10 +1,7 @@
 <div class="jumbotron">
-	<h1><translate>About Page</translate></h1>
-</div>
+	<h1><translate>Über</translate></h1>
 
-<div class="row">
-	<div class="col-xs-12">
+    <p>Familienchronik der Familien Hardt, Thelen, Coenen, ...</p>
+    <p>Zusammengetragen von Sybille Thelen, Peter Hardt, Jakob Thelen und Christoph Thelen</p>
 
-		<p>{{ about }}</p>
-	</div>
 </div>
