--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,12 @@
 	<meta charset="utf-8">
 
 	<!--(if target build)>
-		<link rel="stylesheet" href="css/ngStart.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/project.css">
 		<script src="modules/main.js" data-main="main"></script></script>
 
 	<!(endif)-->
 	<!--(if target local)> -->
-	<!--<script type="text/javascript">parent.uitest && parent.uitest.instrument(window);</script>-->
 	<script src="http://localhost:35729/livereload.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/project.css">
