Erster Wurf für Struktur der Familienseite

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 	<html ng-app="angular" manifest="ngStart.manifest">
 <!(endif)-->
 <!--(if target local)> -->
-<html ng-app="chronik">
+<html>
 <!--<!(endif)-->
 <head>
 	<title>Familienchronik</title>
