--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a href="#familie" class="navbar-brand">WebChronik</a>
+			<a href="#familie/1" class="navbar-brand">WebChronik</a>
         </div>
         <div class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
