--- a/app/modules/person/PersonTemplate.html
+++ b/app/modules/person/PersonTemplate.html
@@ -1,8 +1,17 @@
 {{person.Vorname1}} <span ng-class="person.Vorname1 || person.Vorname2 ? 'rufname' : ''">{{person.Rufname}}</span> {{person.Vorname2}}<br>
-{{person.Nachname}} <span ng-show="person.Geburtsname">geb. {{person.Geburtsname}}</span><br>
+<div ng-show="getKindFamilie()">
+    <a ng-show="!person.Geburtsname" href="#/familie/{{getKindFamilie().id}}">{{person.Nachname}}</a> <span ng-show="person.Geburtsname">{{person.Nachname}} geb. <a href="#/familie/{{getKindFamilie().id}}">{{person.Geburtsname}}</a></span>
+</div>
+<div ng-hide="getKindFamilie()">{{person.Nachname}} <span ng-show="person.Geburtsname">geb. {{person.Geburtsname}}</span></div
+        ><br>
 <span ng-show="person.Geburtstag || person.Geburtsmonat || person.Geburtsjahr">
     * <span ng-show="person.Geburtstag">{{person.Geburtstag}}.</span><span ng-show="person.Geburtsmonat">{{person.Geburtsmonat}}.</span>{{person.Geburtsjahr}}<br>
 </span>
 <span ng-show="person.Sterbetag || person.Sterbemonat || person.Sterbejahr">
     + <span ng-show="person.Sterbetag">{{person.Sterbetag}}.</span><span ng-show="person.Sterbemonat">{{person.Sterbemonat}}.</span>{{person.Sterbejahr}}<br>
 </span>
+<div ng-show="hatElternFamilien">
+    <ul>
+        <li ng-repeat="elternFamilie in getElternFamilien()"><a href="#/familie/{{elternFamilie.id}}">{{getPartnerGeburtsname(elternFamilie)}}</a></li>
+    </ul>
+</div>
