Navigation "andere Ehen" funktioniert

--- a/app/modules/familie/familie.html
+++ b/app/modules/familie/familie.html
@@ -2,12 +2,12 @@
 <div class="row">
     <div class="col-sm-2"></div>
     <div class="col-sm-2" style="background-color: lightblue;height: 160px">
-        <fc-person person="familie.frau" rolle="'mutter'"></fc-person>
+        <fc-person person="familie.frau" familie="familie" rolle="'mutter'"></fc-person>
     </div>
     <div class="col-sm-2"></div>
     <div class="col-sm-2"></div>
     <div class="col-sm-2" style="background-color: green;height: 160px">
-        <fc-person person="familie.mann" rolle="'vater'"></fc-person>
+        <fc-person person="familie.mann" familie="familie" rolle="'vater'"></fc-person>
     </div>
 
     <div class="col-sm-2"></div>
@@ -16,7 +16,7 @@
     <div class="col-sm-{{spaltenVorKindern()}}"></div>
     <div ng-repeat="kind in familie.kindListe">
         <div class="col-sm-2" style="height: 160px; border: 1px solid grey">
-            <fc-person person="kind" rolle="'kind'"></fc-person>
+            <fc-person person="kind" familie="familie" rolle="'kind'"></fc-person>
         </div>
         <div ng-if="!isLetztesKind(kind)" class="col-sm-{{spaltenBreiteZwischenKindern()}}"></div>
     </div>
