--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--(if target build)>
-	<html ng-app="angular" manifest="ngStart.manifest">
+	<html ng-app="angular" manifest="WebChronik.manifest">
 <!(endif)-->
 <!--(if target local)> -->
 <html>
@@ -12,14 +12,14 @@
 
 	<!--(if target build)>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/project.css">
+		<link rel="stylesheet" href="css/WebChronik.css">
 		<script src="modules/main.js" data-main="main"></script></script>
 
 	<!(endif)-->
 	<!--(if target local)> -->
 	<script src="http://localhost:35729/livereload.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/project.css">
+	<link rel="stylesheet" href="css/WebChronik.css">
 	<script src="../../bower_components/requirejs/require.js" data-main="modules/main"></script>
 	<!--<!(endif)-->
 </head>
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a href="#familie/1" class="navbar-brand">WebChronik</a>
+			<a href="#familie/439" class="navbar-brand">WebChronik</a>
         </div>
         <div class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
