--- a/app/index.html
+++ b/app/index.html
@@ -9,35 +9,40 @@
 	<title>Familienchronik</title>
 
 	<meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--(if target build)>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/WebChronik.css">
 		<script src="modules/main.js" data-main="main"></script></script>
 
 	<!(endif)-->
 	<!--(if target local)> -->
 	<script src="http://localhost:35729/livereload.js"></script>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/WebChronik.css">
+	<link rel="stylesheet" href="css/ngActivityIndicator.min.css">
 	<script src="../../bower_components/requirejs/require.js" data-main="modules/main"></script>
 	<!--<!(endif)-->
 </head>
 <body ng-controller="navbarController">
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a href="#familie/439" class="navbar-brand">WebChronik</a>
+<div ng-activity-indicator="CircledWhite" class="center loading-spinner"></div>
+<div>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="#familie/439" class="navbar-brand">WebChronik</a>
+            </div>
+            <div class="collapse navbar-collapse" >
+                <ul class="nav navbar-nav">
+                    <li ng-class="{active: isActive('/about/')}"><a href="#about">Über</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="collapse navbar-collapse" >
-            <ul class="nav navbar-nav">
-                <li ng-class="{active: isActive('/about/')}"><a href="#about">Über</a></li>
-            </ul>
-        </div>
-	</div>
-</nav>
-<div class="container" >
-	<div ng-view></div>
+    </nav>
+    <div ng-show="AILoading" style="text-align: center; width: 100%; margin-top: 20px">Lade Daten...</div>
+    <div class="container" >
+        <div ng-view></div>
+    </div>
 </div>
 
 
