--- a/app/modules/familie/familie.html
+++ b/app/modules/familie/familie.html
@@ -1,24 +1,24 @@
 <span style="margin-top: 50px;"><h1>{{familie.FamilienName}} {{familie.Hochzeitsjahr}}</h1></span>
 <div class="row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-3">
+    <div class="col-md-2"></div>
+    <div class="col-md-3">
         <fc-person person="familie.frau" familie="familie" rolle="'mutter'"></fc-person>
     </div>
-    <div class="col-sm-2"></div>
-    <div class="col-sm-3">
+    <div class="col-md-2"></div>
+    <div class="col-md-3">
         <fc-person person="familie.mann" familie="familie" rolle="'vater'"></fc-person>
     </div>
 
-    <div class="col-sm-2"></div>
+    <div class="col-md-2"></div>
 </div>
 <div class="row" style="margin-top: 50px">
-    <div class="col-sm-{{spaltenVorKindern()}}"></div>
+    <div class="col-md-{{spaltenVorKindern()}}"></div>
     <div ng-repeat="kind in familie.kindListe">
-        <div class="col-sm-2">
+        <div class="col-md-2">
             <fc-person person="kind" familie="familie" rolle="'kind'"></fc-person>
         </div>
-        <div ng-if="!isLetztesKind(kind)" class="col-sm-{{spaltenBreiteZwischenKindern()}}"></div>
+        <div ng-if="!isLetztesKind(kind)" class="col-md-{{spaltenBreiteZwischenKindern()}}"></div>
     </div>
 </div>
 
-<div ng-hide="familie.frau" style="position: fixed; z-index: 100; opacity: 0.5">Lade Daten</div>
+<!--<div ng-hide="familie.frau" style="position: fixed; z-index: 100; opacity: 0.5">Lade Daten</div>-->
